unpackaged/main/default/objects/Medical_Expense__c/Medical_Expense__c.object-meta.xml
<CustomObject>
    <label>Case Expense</label>
    <nameField>
        <label>Case Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>