unpackaged/main/default/objects/Medical_Expense__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Type</label>
    <referenceTo>litify_pm__Case_Type__c</referenceTo>
    <relationshipName>Medical_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>