unpackaged/main/default/objects/Medical_Expense__c/fields/Client_s_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_s_Full_Name__c</fullName>
    <formula>Clients_First_Name__c + &#39; &#39;+ Clients_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client&#39;s Full Name</label>
    <type>Text</type>
</CustomField>