unpackaged/main/default/objects/Medical_Expense__c/fields/Clients_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Clients_Date_of_Birth__c</fullName>
    <label>Client&#39;s Date of Birth</label>
    <type>Date</type>
</CustomField>