unpackaged/main/default/objects/Medical_Expense__c/fields/Clients_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Clients_First_Name__c</fullName>
    <label>Client&#39;s First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>