unpackaged/main/default/objects/Medical_Expense__c/fields/Doc_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Doc_Sign_Date__c</fullName>
    <label>Doc Sign Date</label>
    <type>Date</type>
</CustomField>