unpackaged/main/default/objects/Medical_Expense__c/fields/Expense_Category__c.field-meta.xml
<CustomField>
    <fullName>Expense_Category__c</fullName>
    <label>Expense Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medical Records</fullName>
            </value>
            <value>
                <fullName>Prequalification</fullName>
            </value>
            <value>
                <fullName>Case Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>