unpackaged/main/default/objects/Medical_Expense__c/fields/fx_Tranche__c.field-meta.xml
<CustomField>
    <fullName>fx_Tranche__c</fullName>
    <description>Pulls the value of the Tranche Override picklist from the related Intake record, converted to text for use in formulas, reports, or comparisons.</description>
    <formula>IF(
  RecordType.DeveloperName = &quot;Invoice&quot;,
  TEXT(Tranche__c),
  TEXT(Intake__r.Tranche_Override__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the Tranche Override selected on the related Intake. Used for reference, filtering, or automation. This value is shown as text and mirrors the selection made on the Intake record.</inlineHelpText>
    <label>fx_Tranche</label>
    <type>Text</type>
</CustomField>