unpackaged/main/default/objects/Medical_Expense__c/fields/HIC_Fee__c.field-meta.xml
<CustomField>
    <fullName>HIC_Fee__c</fullName>
    <label>HIC Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>