unpackaged/main/default/objects/Medical_Expense__c/fields/Injured_Party_s_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Injured_Party_s_Date_of_Birth__c</fullName>
    <label>Injured Party&#39;s Date of Birth</label>
    <type>Date</type>
</CustomField>