unpackaged/main/default/objects/Medical_Expense__c/fields/Injured_Party_s_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Injured_Party_s_Last_Name__c</fullName>
    <label>Injured Party&#39;s Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>