unpackaged/main/default/objects/Medical_Expense__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Case Expenses</relationshipLabel>
    <relationshipName>Medical_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>