unpackaged/main/default/objects/Medical_Expense__c/fields/Intake_Id__c.field-meta.xml
<CustomField>
    <fullName>Intake_Id__c</fullName>
    <formula>Intake__r.FX_Intake_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Id</label>
    <type>Text</type>
</CustomField>