unpackaged/main/default/objects/Medical_Expense__c/fields/Invoice_Period__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Period__c</fullName>
    <description>Returns the month and year from the Invoice Date in MM/YYYY format.</description>
    <formula>LPAD(TEXT(MONTH(Invoice_Date__c)), 2, &quot;0&quot;) + &quot;/&quot; + TEXT(YEAR(Invoice_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the month and year from the Invoice Date in MM/YYYY format.</inlineHelpText>
    <label>Invoice Period</label>
    <type>Text</type>
</CustomField>