unpackaged/main/default/objects/Medical_Expense__c/fields/Matter_Id__c.field-meta.xml
<CustomField>
    <fullName>Matter_Id__c</fullName>
    <label>Matter Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>