unpackaged/main/default/objects/Medical_Expense__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Paid?</label>
    <type>Checkbox</type>
</CustomField>