unpackaged/main/default/objects/Medical_Expense__c/fields/Potential_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Potential_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potential Duplicate</label>
    <type>Checkbox</type>
</CustomField>