unpackaged/main/default/objects/Medical_Expense__c/fields/Retainer__c.field-meta.xml
<CustomField>
    <fullName>Retainer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retainer</label>
    <type>Checkbox</type>
</CustomField>