unpackaged/main/default/objects/Medical_Expense__c/fields/Retainer_Drawdown_Amount__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Drawdown_Amount__c</fullName>
    <label>Retainer Drawdown Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>