unpackaged/main/default/objects/Medical_Expense__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case Works</fullName>
            </value>
            <value>
                <fullName>Ciox</fullName>
            </value>
            <value>
                <fullName>CMDS</fullName>
            </value>
            <value>
                <fullName>Epiq</fullName>
            </value>
            <value>
                <fullName>Nomos</fullName>
            </value>
            <value>
                <fullName>NRR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Legal Support Services</fullName>
            </value>
            <value>
                <fullName>Ashcraft &amp; Gerel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>