unpackaged/main/default/objects/Medical_Expense__c/recordTypes/Invoice.recordType-meta.xml
<RecordType>
    <fullName>Invoice</fullName>
    <active>true</active>
    <label>Invoice</label>
</RecordType>