unpackaged/main/default/objects/Medical_Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Intake__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Expense_Category__c</columns>
    <columns>Partner_Name__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Expense_Amount__c</columns>
    <columns>Paid__c</columns>
    <columns>Case_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expense_Category__c</field>
        <operation>equals</operation>
        <value>Medical Records</value>
    </filters>
    <label>All</label>
</ListView>