unpackaged/main/default/objects/Medical_Expense__c/listViews/All_Invoices.listView-meta.xml
<ListView>
    <fullName>All_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Expense_Category__c</columns>
    <columns>Partner_Name__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Expense_Amount__c</columns>
    <columns>Paid__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Retainer__c</columns>
    <columns>Retainer_Drawdown_Amount__c</columns>
    <columns>Retainer_Replenish_Amount__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Medical_Expense__c.Invoice</value>
    </filters>
    <label>All Invoices</label>
</ListView>