unpackaged/main/default/objects/Medical_Expense__c/listViews/Nomos_Expenses.listView-meta.xml
<ListView>
    <fullName>Nomos_Expenses</fullName>
    <columns>NAME</columns>
    <columns>Intake__c</columns>
    <columns>Expense_Category__c</columns>
    <columns>Partner_Name__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Expense_Amount__c</columns>
    <columns>Paid__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vendor__c</field>
        <operation>equals</operation>
        <value>Nomos</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Sharon</value>
    </filters>
    <label>Nomos Expenses</label>
</ListView>