unpackaged/main/default/objects/Medical_Expense__c/listViews/Other_Expenses.listView-meta.xml
<ListView>
    <fullName>Other_Expenses</fullName>
    <columns>NAME</columns>
    <columns>Intake__c</columns>
    <columns>Expense_Category__c</columns>
    <columns>Partner_Name__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Expense_Amount__c</columns>
    <columns>Paid__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vendor__c</field>
        <operation>notEqual</operation>
        <value>Nomos,NRR</value>
    </filters>
    <label>Other Expenses</label>
</ListView>