unpackaged/main/default/objects/Medical_Expense__c/listViews/Transaction_Record_Type.listView-meta.xml
<ListView>
    <fullName>Transaction_Record_Type</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Medical_Expense__c.Transaction</value>
    </filters>
    <label>Transaction Record Type</label>
</ListView>